--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==5.0.1
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-djongo==1.3.6
+# djongo==1.3.6
 pymongo==4.6.1
 channels==4.0.0
 channels-redis==4.2.0
@@ -11,3 +11,4 @@ Pillow==11.0.0
 python-decouple==3.8
 daphne==4.0.0
 asgiref==3.7.2
+sqlparse==0.3.1
