--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   "bugs": {
     "url": "https://github.com/hectorllb-insti/RED-RED/issues"
   },
-  "homepage": "https://github.com/hectorllb-insti/RED-RED#readme"
+  "homepage": "https://github.com/hectorllb-insti/RED-RED#readme",
+  "dependencies": {
+    "framer-motion": "^12.23.24"
+  }
 }
