--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,13 +5,18 @@
   "description": "Red social completa con Django y React",
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#ef4444",
+  "theme_color": "#dc2626",
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
