fix: Fix frontend dependency errors

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "homepage": "https://github.com/hectorllb-insti/RED-RED#readme",
   "dependencies": {
-    "framer-motion": "^12.23.24"
+    "framer-motion": "^12.23.24",
+    "react-scripts": "^5.0.1"
   }
 }
