--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
+    "start": "set HOST=0.0.0.0&& react-scripts start",
     "test": "react-scripts test"
   },
   "browserslist": {
