Add environment config docs and scripts
Added comprehensive environment configuration documentation (CONFIGURACION.md, ENV-README.md, GUIA-VISUAL-CONFIG.md, RESUMEN-CONFIGURACION.md) and scripts for switching environments (cambiar-entorno.bat, cambiar-entorno.sh). Updated backend/.env.example and backend/config/settings.py to support new environment variables and improved flexibility. Added backend/.env.development for local development setup.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,137 @@
-# Variables de entorno para RED-RED
-# Copia este archivo como .env y ajusta los valores
+# ====================================
+# RED-RED Backend Configuration
+# ====================================
+# Copia este archivo como .env y ajusta los valores según tu entorno
+# Para producción, copia como .env.production
+# Para desarrollo, copia como .env.development
 
-# Django
+# ====================================
+# DJANGO CORE SETTINGS
+# ====================================
+# Secret key para Django - CAMBIAR EN PRODUCCIÓN
+# Genera una nueva con: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
 SECRET_KEY=django-insecure-change-me-in-production-very-long-secret-key-123456789
+
+# Debug mode - DEBE SER False EN PRODUCCIÓN
 DEBUG=True
+
+# Hosts permitidos (separados por comas, sin espacios)
+# Ejemplo: 127.0.0.1,localhost,midominio.com,192.168.1.100
 ALLOWED_HOSTS=127.0.0.1,localhost
 
-# Base de datos MongoDB
+# ====================================
+# NETWORK CONFIGURATION
+# ====================================
+# IP de la red local (para acceso desde otros dispositivos)
+LOCAL_IP=127.0.0.1
+
+# Puerto del servidor Django (por defecto 8000)
+PORT=8000
+
+# ====================================
+# DATABASE CONFIGURATION
+# ====================================
+# Actualmente usando SQLite para desarrollo
+# Para MongoDB, descomentar en settings.py y configurar:
+DB_ENGINE=sqlite3
 DB_NAME=red_red_db
 DB_HOST=mongodb://localhost:27017
+DB_PORT=27017
+DB_USER=
+DB_PASSWORD=
 
-# Redis (para WebSockets)
+# ====================================
+# REDIS CONFIGURATION (WebSockets en producción)
+# ====================================
+# URL de conexión a Redis para Channels (WebSockets)
+# Dejar vacío para usar InMemoryChannelLayer (solo desarrollo)
 REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
-# CORS (Frontend)
+# ====================================
+# CORS CONFIGURATION
+# ====================================
+# Orígenes permitidos para CORS (separados por comas)
+# Incluir todas las URLs desde donde se accederá al frontend
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Permitir todos los orígenes (solo desarrollo, NUNCA en producción)
+CORS_ALLOW_ALL_ORIGINS=False
+
+# ====================================
+# JWT CONFIGURATION
+# ====================================
+# Tiempo de vida del access token (en minutos)
+JWT_ACCESS_TOKEN_LIFETIME=60
+
+# Tiempo de vida del refresh token (en días)
+JWT_REFRESH_TOKEN_LIFETIME=7
+
+# Rotar refresh tokens al usarlos
+JWT_ROTATE_REFRESH_TOKENS=True
+
+# ====================================
+# MEDIA & STATIC FILES
+# ====================================
+# Directorio para archivos subidos
+MEDIA_ROOT=media
+MEDIA_URL=/media/
+
+# Directorio para archivos estáticos
+STATIC_ROOT=staticfiles
+STATIC_URL=/static/
+
+# ====================================
+# FILE UPLOAD LIMITS
+# ====================================
+# Tamaño máximo para imágenes de perfil (en MB)
+MAX_PROFILE_IMAGE_SIZE=5
+
+# Tamaño máximo para imágenes de portada (en MB)
+MAX_COVER_IMAGE_SIZE=10
+
+# Tamaño máximo para imágenes en posts (en MB)
+MAX_POST_IMAGE_SIZE=10
+
+# Formatos de imagen permitidos (separados por comas)
+ALLOWED_IMAGE_FORMATS=image/jpeg,image/png,image/jpg,image/webp,image/gif
+
+# ====================================
+# PAGINATION
+# ====================================
+# Número de elementos por página
+PAGE_SIZE=20
+
+# ====================================
+# INTERNATIONALIZATION
+# ====================================
+# Idioma por defecto
+LANGUAGE_CODE=es-es
+
+# Zona horaria
+TIME_ZONE=Europe/Madrid
+
+# ====================================
+# SECURITY SETTINGS (PRODUCCIÓN)
+# ====================================
+# Forzar HTTPS (solo producción)
+SECURE_SSL_REDIRECT=False
+
+# Configuración de cookies seguras (solo producción)
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
+
+# HSTS (solo producción)
+SECURE_HSTS_SECONDS=0
+SECURE_HSTS_INCLUDE_SUBDOMAINS=False
+SECURE_HSTS_PRELOAD=False
+
+# ====================================
+# LOGGING
+# ====================================
+# Nivel de logging (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL=INFO
+
+# Directorio para logs
+LOG_DIR=logs
