--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,9 +35,11 @@
     "axios": "^1.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.15.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.454.0",
     "moment": "^2.29.4",
+    "peerjs": "^1.5.5",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
