--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -18,6 +18,10 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|webp))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
